[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "rlimit"
version = "1.5"
authors = [
    { name = "omidekz", email = "omidekz@gmail.com" },
]
description = "python rate limiter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/omidekz/rlimit"
"Bug Tracker" = "https://github.com/omidekz/rlimit/issues"